# small_mem

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  smem_demo
inc/: smem_port.h
small_mem/: CMakeLists.txt
small_mem/inc/: smem.h  smem_port.h
small_mem/src/: smem.c
test/: list.h  main.cpp  tc_mem.cpp
